# packrat

./: .gitignore  CLAUDE.md  CLAUDE.md.provisional  Cargo.toml  LICENSE  README.md  packrat.example.toml  todo.txt
chunks/: CLAUDE_md_18-28.txt  CLAUDE_md_21-39.txt  CLAUDE_md_33-38.txt  CLAUDE_md_4-23.txt  Users_gary_dev_lab_packrat_CLAUDE_md_20-23.txt  Users_gary_dev_lab_packrat_CLAUDE_md_9-13.txt  debug_dir____CLAUDE_md_4-12.txt  src_lib_rs_2-5.txt  src_main_rs_3-14.txt
src/: lib.rs  main.rs
src/app/: events.rs  mod.rs  state.rs
src/config/: mod.rs
src/editor/: mod.rs
src/explorer/: mod.rs
src/storage/: mod.rs
src/ui/: mod.rs
src/utils/: mod.rs  tokenizer.rs  watcher.rs
src/viewer/: mod.rs
tests/: chunk_tests.rs  editor_chunk_tests.rs  editor_tests.rs  explorer_tests.rs  simulation_tests.rs  utils_tests.rs  viewer_tests.rs
tests/simulation/: hoon_tests.rs  mod.rs
