[package]
name = "packrat"
version = "0.1.0"
edition = "2021"
description = "TUI application for interactively chunking text files"
authors = ["Gary Lieberman <tiller.tolbus@gmail.com>"]

[dependencies]
# TUI and event handling
ratatui = "0.26.0"
crossterm = "0.28.0"

# Filesystem operations
walkdir = "2.4.0"
notify = "6.1.1"

# Error handling
anyhow = "1.0.81"

# Text editing
tui-textarea = { version = "0.7.0", features = ["crossterm"] }

# Future dependencies
# serde = { version = "1.0", features = ["derive"] }
# toml = "0.8.10"

[dev-dependencies]
tempfile = "3.10.1"
