[package]
name = "packrat"
version = "0.1.0"
edition = "2021"
description = "TUI application for interactively chunking text files"
authors = ["Gary Lieberman <tiller.tolbus@gmail.com>"]

[dependencies]
# TUI and event handling
ratatui = "0.29.0"
# Let Ratatui handle the Crossterm dependency to ensure version compatibility

# Filesystem operations
walkdir = "2.4.0"
notify = "6.1.1"

# Error handling
anyhow = "1.0.81"

# Text editing
edtui = "0.9.6"

# Future dependencies
# serde = { version = "1.0", features = ["derive"] }
# toml = "0.8.10"

[dev-dependencies]
tempfile = "3.10.1"
