[package]
name = "packrat"
version = "0.1.0"
edition = "2021"
description = "TUI application for interactively chunking text files"
authors = ["Gary Lieberman <tiller.tolbus@gmail.com>"]

[dependencies]
# TUI and event handling
ratatui = "0.29.0"
# Let Ratatui handle the Crossterm dependency to ensure version compatibility

# Filesystem operations
walkdir = "2.4.0"
notify = "6.1.1"

# Error handling
anyhow = "1.0.81"

# Text editing
edtui = "0.9.6"

# Serialization for chunk metadata
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }

# Claude tokenizer for token counting
tiktoken-rs = "0.5.8"

# Configuration
toml = "0.8.10"
directories = "5.0.1"  # For finding config directories

[dev-dependencies]
tempfile = "3.10.1"
